--- a/js_injector/static/description/index.html
+++ b/js_injector/static/description/index.html
@@ -1,16 +1,16 @@
 <section class="oe_container">
   <div class="oe_row oe_spaced">
     <h2 class="oe_slogan" style="color:#2C0091;font-weight: bold;">JS Injector</h2>
-    <p style="font-size: 124%;">This module use for impliment the javascript , whatever javascript enter by the admin for the group or
-    assign to the group , the javascript impliment to the user of the group . When the user login , the
-    javascript apply to the user.</p>
+    <p style="font-size: 124%;">This module use for implement the java script , whatever java script enter by the admin for the group or
+    assign to the group , the java script implement to the user of the group . When the user login , the
+    java script apply to the user.</p>
   </div>
 </section>
 <section class="oe_container oe_dark">
     <h3 class="oe_slogan" style="color:#2C0091;font-weight: bold;">JS Injector Form View</h3>
     <div class="oe_row oe_spaced">
         <div class="oe_span6">
-          <p style="font-size: 124%;">You can add multiple group to a perticular js record and the javascript will execute to the user of group. Also you have to active the js record for execute.</p>
+          <p style="font-size: 124%;">You can add multiple group to a perticular js record and the java script will execute to the user of group. Also you have to active the js record for execute.</p>
         </div>
         <div class="oe_span6">
           <img class="oe_picture oe_screenshot" src="js_injector_form.png">
